metrics/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metrics-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: grafana-service
              servicePort: 3000
    - http:
        paths:
          - path: /
            backend:
              serviceName: prometheus-service
              servicePort: 9090
